update game play